// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Typography))
    className="title-mock"
    variant="caption"
  >
    this is a title of the slider
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="label-mock"
          display="inline"
          variant="body2"
        >
          $0
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="sliderContainer-mock"
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Slider))
          classes={
            Object {
              "activated": "activated-mock",
              "root": "sliderRoot-mock",
              "thumb": "thumb-mock",
              "thumbIconWrapper": "iconWrapper-mock",
              "track": "track-mock",
              "trackAfter": "track-mock",
              "trackBefore": "track-mock",
            }
          }
          max={100}
          min={0}
          onChange={[MockFunction]}
          thumb={<Memo(WithStyles(SliderThumb)) />}
          value={23}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="label-mock"
          display="inline"
          variant="body2"
        >
          $max
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Slider renders custom min/max 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Typography))
    className="title-mock"
    variant="caption"
  >
    this is a title of the slider
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="label-mock"
          display="inline"
          variant="body2"
        >
          $0
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="sliderContainer-mock"
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Slider))
          classes={
            Object {
              "activated": "activated-mock",
              "root": "sliderRoot-mock",
              "thumb": "thumb-mock",
              "thumbIconWrapper": "iconWrapper-mock",
              "track": "track-mock",
              "trackAfter": "track-mock",
              "trackBefore": "track-mock",
            }
          }
          max={20}
          min={-20}
          onChange={[MockFunction]}
          thumb={<Memo(WithStyles(SliderThumb)) />}
          value={8}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="label-mock"
          display="inline"
          variant="body2"
        >
          $max
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Slider renders with labels 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Typography))
    className="title-mock"
    variant="caption"
  >
    this is a title of the slider
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="label-mock"
          display="inline"
          variant="body2"
        >
          $ MIN
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="sliderContainer-mock"
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Slider))
          classes={
            Object {
              "activated": "activated-mock",
              "root": "sliderRoot-mock",
              "thumb": "thumb-mock",
              "thumbIconWrapper": "iconWrapper-mock",
              "track": "track-mock",
              "trackAfter": "track-mock",
              "trackBefore": "track-mock",
            }
          }
          max={100}
          min={0}
          onChange={[MockFunction]}
          thumb={<Memo(WithStyles(SliderThumb)) />}
          value={23}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="label-mock"
          display="inline"
          variant="body2"
        >
          $ MAX
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
